@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-16T08:21:34Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 10 ],
-  "count_decinc" : [ -8, +10 ],
+  "timestamp" : "2022-07-16T16:23:18Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 10 ],
+  "count_decinc" : [ -9, +10 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 6 ],
   "uniques_decinc" : [ -5, +6 ]
