@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-07-16T08:21:34Z",
+  "timestamp" : "2022-07-16T16:23:18Z",
   "count_outdated" : 2233,
   "uniques_outdated" : 479,
-  "count" : 2295,
+  "count" : 2294,
   "uniques" : 512,
   "clones" : [
     {
       "timestamp": "2022-07-02T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 10 ],
+      "count": 1,
+      "count_minmax": [ 1, 10 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 6 ]
     },
