@@ -1,3 +1,10 @@
+2022-07-16T16:23:18Z:
+* notice: last 14d: unq all: 16 61
+* notice: prev accum: outdated-unq outdated-all / unq all: 479 2233 / 512 2295
+* notice: next accum: outdated-unq outdated-all / unq all: 479 2233 / 512 2294
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +6 +10 -5 -9 / 1 1
+* notice: removed / changed dates: [] / [2022-07-02]
+
 2022-07-16T08:21:34Z:
 * notice: last 14d: unq all: 16 62
 * notice: prev accum: outdated-unq outdated-all / unq all: 479 2233 / 511 2295
